force-app/main/default/objects/SOS_DAC_Codes__c/SOS_DAC_Codes__c.object-meta.xml
<CustomObject>
    <description>Stores SOS Codes and DAC Codes</description>
    <label>SOS &amp; DAC Code</label>
    <nameField>
        <label>SOS / DAC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOS &amp; DAC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>