force-app/main/default/objects/SOS_DAC_Codes__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <length>80</length>
    <type>Text</type>
</CustomField>