force-app/main/default/objects/SOS_DAC_Codes__c/fields/Corresponding_Previous_SOS_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Previous_SOS_Attribute__c</fullName>
    <label>Corresponding Previous SOS Attribute</label>
    <length>80</length>
    <type>Text</type>
</CustomField>