force-app/main/default/objects/SOS_DAC_Codes__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>