force-app/main/default/objects/SOS_DAC_Codes__c/fields/Proposed_SOS_CV_PU_Types__c.field-meta.xml
<CustomField>
    <fullName>Proposed_SOS_CV_PU_Types__c</fullName>
    <label>Proposed SOS CV PU Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Other</fullName>
            </value>
            <value>
                <fullName>YC-Youth Care-140</fullName>
            </value>
            <value>
                <fullName>OAC-Other Alternative Care-150</fullName>
            </value>
            <value>
                <fullName>SFC-SOS Family Care-160</fullName>
            </value>
            <value>
                <fullName>FFC-Foster Family Care-170</fullName>
            </value>
            <value>
                <fullName>SGH-Small Group Homes-180</fullName>
            </value>
            <value>
                <fullName>FS-Family Strengthening-210</fullName>
            </value>
            <value>
                <fullName>EDU-Primary &amp; Secondary Education-310</fullName>
            </value>
            <value>
                <fullName>CT-Care Training-320</fullName>
            </value>
            <value>
                <fullName>ECD-Early Childhood Care &amp; Development-330</fullName>
            </value>
            <value>
                <fullName>EET-Employment &amp; Entrepreneurship Training-340</fullName>
            </value>
            <value>
                <fullName>HPP-Health Promotion &amp; Prevention-410</fullName>
            </value>
            <value>
                <fullName>MED-Medical Care-420</fullName>
            </value>
            <value>
                <fullName>ER-Emergency Response-510</fullName>
            </value>
            <value>
                <fullName>OA-Other Activities-610</fullName>
            </value>
            <value>
                <fullName>IOR-International Office Region-910</fullName>
            </value>
            <value>
                <fullName>IB-International Branch Office-911</fullName>
            </value>
            <value>
                <fullName>IORC-International Office Region Cost Centre-919</fullName>
            </value>
            <value>
                <fullName>IO-International Office-940</fullName>
            </value>
            <value>
                <fullName>IOC-International Office Cost Centre-949</fullName>
            </value>
            <value>
                <fullName>NA-National Judicial Entity-950</fullName>
            </value>
            <value>
                <fullName>NO-National Office-960</fullName>
            </value>
            <value>
                <fullName>NB-National Branch Office-961</fullName>
            </value>
            <value>
                <fullName>NBFR-National Branch O. FR-962</fullName>
            </value>
            <value>
                <fullName>NBAD-Advocacy-963</fullName>
            </value>
            <value>
                <fullName>NBFE-National Branch O. FE-964</fullName>
            </value>
            <value>
                <fullName>PA-Promoting Association-970</fullName>
            </value>
            <value>
                <fullName>SA-Supporting Association-980</fullName>
            </value>
            <value>
                <fullName>HGA-Hermann Gmeiner Academy-990&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>