force-app/main/default/objects/SOS_DAC_Codes__c/recordTypes/DAC_Code.recordType-meta.xml
<RecordType>
    <fullName>DAC_Code</fullName>
    <active>true</active>
    <label>DAC Code</label>
</RecordType>