force-app/main/default/objects/SOS_DAC_Codes__c/recordTypes/SOS_Code.recordType-meta.xml
<RecordType>
    <fullName>SOS_Code</fullName>
    <active>true</active>
    <label>SOS Code</label>
</RecordType>