force-app/main/default/objects/SOS_DAC_Codes__c/listViews/All_Codes.listView-meta.xml
<ListView>
    <fullName>All_Codes</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Definition__c</columns>
    <columns>Proposed_SOS_CV_PU_Types__c</columns>
    <columns>Corresponding_Previous_SOS_Attribute__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Codes</label>
</ListView>