force-app/main/default/objects/SOS_DAC_Codes__c/listViews/All_DAC_Codes.listView-meta.xml
<ListView>
    <fullName>All_DAC_Codes</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Attribute__c</columns>
    <columns>Definition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SOS_DAC_Codes__c.DAC_Code</value>
    </filters>
    <label>All DAC Codes</label>
</ListView>